Added minmax function

--- a/scale_data.ipynb
+++ b/scale_data.ipynb
@@ -139,6 +139,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "199\n",
+      "122\n",
+      "99\n",
+      "846\n",
+      "67.1\n",
+      "2.42\n",
+      "81\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in diabetes.columns:\n",
+    "    print(max(diabetes[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dataset_minmax(dataset):\n",
+    "    minmax = list()\n",
+    "    for i in dataset.columns:\n",
+    "        min_val = min(diabetes[i])\n",
+    "        max_val = max(diabetes[i])\n",
+    "        minmax.append([min_val, max_val])\n",
+    "    return minmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 17],\n",
+       " [0, 199],\n",
+       " [0, 122],\n",
+       " [0, 99],\n",
+       " [0, 846],\n",
+       " [0.0, 67.1],\n",
+       " [0.078, 2.42],\n",
+       " [21, 81],\n",
+       " [0, 1]]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_minmax(diabetes)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
