Finalized standardize function

--- a/scale_data.ipynb
+++ b/scale_data.ipynb
@@ -926,15 +926,9 @@
     }
    ],
    "source": [
+    "# standardized data\n",
     "diabetes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
