Added k-fold cross validation split

--- a/kfold_cv_split.ipynb
+++ b/kfold_cv_split.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        " 13        None  None             no  }"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "[178 rows x 14 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,18 +495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_test_split(dataset, split=0.8):\n",
+    "    # create empty list to store training set\n",
     "    train = list()\n",
+    "\n",
+    "    # determine the proportion of the dataset for training; the remainder will go to testing\n",
     "    train_size = split * len(dataset)\n",
+    "\n",
+    "    # create list of lists for each row in dataset\n",
     "    df_copy = dataset.values.tolist()\n",
     "\n",
     "    # while the length of the train list is less than the train_size\n",
     "    while len(train) < train_size:\n",
-    "        # get a random index value\n",
+    "        # get a random index value from df_copy\n",
     "        index = randrange(len(df_copy))\n",
     "        # append the removed item from df_copy to the train list\n",
     "        train.append(df_copy.pop(index))\n",
@@ -516,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -538,29 +543,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# k-fold Cross Validation Split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The k-fold cross validation method is a resampling method that provides a more accurate estimate of algorithm performance.\n",
+    "\n",
+    "It does this by splitting the data into `k` groups. The algorithm is then trained and evaluated `k` times and the performance is summarized by taking the mean performance score.\n",
+    "\n",
+    "Cross validation works by first training the algorithm on the `k`-1 groups of the data and evaluating it on the `k`th hold-out group as the test set. This is repeated until each of the `k` groups is held out and used as the test set."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_validation_split(dataset, folds=3):\n",
+    "    # create empty list to store each fold\n",
+    "    dataset_split = list()\n",
+    "\n",
+    "    # create list of lists that holds a copy of dataset\n",
+    "    df_copy = dataset.values.tolist()\n",
+    "\n",
+    "    # get number of rows to be stored in each fold\n",
+    "    fold_size = int(len(dataset)) / folds\n",
+    "\n",
+    "    for _ in range(folds):\n",
+    "        # create empty list to store the fold\n",
+    "        fold = list()\n",
+    "        while len(fold) < fold_size and len(df_copy) > 0:\n",
+    "            # get random index from df_copy\n",
+    "            index = randrange(len(df_copy))\n",
+    "            # append row that has been removed from df_copy to fold\n",
+    "            fold.append(df_copy.pop(index))\n",
+    "        dataset_split.append(fold)\n",
+    "    return dataset_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35"
+       "10"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "seed(42)\n",
+    "folds = cross_validation_split(df, 10)\n",
+    "len(folds)"
+   ]
   }
  ],
  "metadata": {
