Minor edits to comments

--- a/kfold_cv_split.ipynb
+++ b/kfold_cv_split.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,10 +570,10 @@
     "    # create empty list to store each fold\n",
     "    dataset_split = list()\n",
     "\n",
-    "    # create list of lists that holds a copy of dataset\n",
+    "    # create list of lists that holds a copy of the dataset values\n",
     "    df_copy = dataset.values.tolist()\n",
     "\n",
-    "    # get number of rows to be stored in each fold\n",
+    "    # set the number of rows to be stored in each fold\n",
     "    fold_size = int(len(dataset)) / folds\n",
     "\n",
     "    for _ in range(folds):\n",
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "10"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,6 +609,284 @@
     "folds = cross_validation_split(df, 10)\n",
     "len(folds)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[12.96,\n",
+       "  3.45,\n",
+       "  2.35,\n",
+       "  18.5,\n",
+       "  106.0,\n",
+       "  1.39,\n",
+       "  0.7,\n",
+       "  0.4,\n",
+       "  0.94,\n",
+       "  5.28,\n",
+       "  0.68,\n",
+       "  1.75,\n",
+       "  675.0,\n",
+       "  3.0],\n",
+       " [13.87,\n",
+       "  1.9,\n",
+       "  2.8,\n",
+       "  19.4,\n",
+       "  107.0,\n",
+       "  2.95,\n",
+       "  2.97,\n",
+       "  0.37,\n",
+       "  1.76,\n",
+       "  4.5,\n",
+       "  1.25,\n",
+       "  3.4,\n",
+       "  915.0,\n",
+       "  1.0],\n",
+       " [14.39,\n",
+       "  1.87,\n",
+       "  2.45,\n",
+       "  14.6,\n",
+       "  96.0,\n",
+       "  2.5,\n",
+       "  2.52,\n",
+       "  0.3,\n",
+       "  1.98,\n",
+       "  5.25,\n",
+       "  1.02,\n",
+       "  3.58,\n",
+       "  1290.0,\n",
+       "  1.0],\n",
+       " [13.49,\n",
+       "  1.66,\n",
+       "  2.24,\n",
+       "  24.0,\n",
+       "  87.0,\n",
+       "  1.88,\n",
+       "  1.84,\n",
+       "  0.27,\n",
+       "  1.03,\n",
+       "  3.74,\n",
+       "  0.98,\n",
+       "  2.78,\n",
+       "  472.0,\n",
+       "  2.0],\n",
+       " [12.17,\n",
+       "  1.45,\n",
+       "  2.53,\n",
+       "  19.0,\n",
+       "  104.0,\n",
+       "  1.89,\n",
+       "  1.75,\n",
+       "  0.45,\n",
+       "  1.03,\n",
+       "  2.95,\n",
+       "  1.45,\n",
+       "  2.23,\n",
+       "  355.0,\n",
+       "  2.0],\n",
+       " [12.37,\n",
+       "  0.94,\n",
+       "  1.36,\n",
+       "  10.6,\n",
+       "  88.0,\n",
+       "  1.98,\n",
+       "  0.57,\n",
+       "  0.28,\n",
+       "  0.42,\n",
+       "  1.95,\n",
+       "  1.05,\n",
+       "  1.82,\n",
+       "  520.0,\n",
+       "  2.0],\n",
+       " [13.05,\n",
+       "  1.65,\n",
+       "  2.55,\n",
+       "  18.0,\n",
+       "  98.0,\n",
+       "  2.45,\n",
+       "  2.43,\n",
+       "  0.29,\n",
+       "  1.44,\n",
+       "  4.25,\n",
+       "  1.12,\n",
+       "  2.51,\n",
+       "  1105.0,\n",
+       "  1.0],\n",
+       " [13.3,\n",
+       "  1.72,\n",
+       "  2.14,\n",
+       "  17.0,\n",
+       "  94.0,\n",
+       "  2.4,\n",
+       "  2.19,\n",
+       "  0.27,\n",
+       "  1.35,\n",
+       "  3.95,\n",
+       "  1.02,\n",
+       "  2.77,\n",
+       "  1285.0,\n",
+       "  1.0],\n",
+       " [13.88,\n",
+       "  5.04,\n",
+       "  2.23,\n",
+       "  20.0,\n",
+       "  80.0,\n",
+       "  0.98,\n",
+       "  0.34,\n",
+       "  0.4,\n",
+       "  0.68,\n",
+       "  4.9,\n",
+       "  0.58,\n",
+       "  1.33,\n",
+       "  415.0,\n",
+       "  3.0],\n",
+       " [12.85,\n",
+       "  1.6,\n",
+       "  2.52,\n",
+       "  17.8,\n",
+       "  95.0,\n",
+       "  2.48,\n",
+       "  2.37,\n",
+       "  0.26,\n",
+       "  1.46,\n",
+       "  3.93,\n",
+       "  1.09,\n",
+       "  3.63,\n",
+       "  1015.0,\n",
+       "  1.0],\n",
+       " [12.36,\n",
+       "  3.83,\n",
+       "  2.38,\n",
+       "  21.0,\n",
+       "  88.0,\n",
+       "  2.3,\n",
+       "  0.92,\n",
+       "  0.5,\n",
+       "  1.04,\n",
+       "  7.65,\n",
+       "  0.56,\n",
+       "  1.58,\n",
+       "  520.0,\n",
+       "  3.0],\n",
+       " [11.82,\n",
+       "  1.47,\n",
+       "  1.99,\n",
+       "  20.8,\n",
+       "  86.0,\n",
+       "  1.98,\n",
+       "  1.6,\n",
+       "  0.3,\n",
+       "  1.53,\n",
+       "  1.95,\n",
+       "  0.95,\n",
+       "  3.33,\n",
+       "  495.0,\n",
+       "  2.0],\n",
+       " [13.86,\n",
+       "  1.35,\n",
+       "  2.27,\n",
+       "  16.0,\n",
+       "  98.0,\n",
+       "  2.98,\n",
+       "  3.15,\n",
+       "  0.22,\n",
+       "  1.85,\n",
+       "  7.22,\n",
+       "  1.01,\n",
+       "  3.55,\n",
+       "  1045.0,\n",
+       "  1.0],\n",
+       " [14.83,\n",
+       "  1.64,\n",
+       "  2.17,\n",
+       "  14.0,\n",
+       "  97.0,\n",
+       "  2.8,\n",
+       "  2.98,\n",
+       "  0.29,\n",
+       "  1.98,\n",
+       "  5.2,\n",
+       "  1.08,\n",
+       "  2.85,\n",
+       "  1045.0,\n",
+       "  1.0],\n",
+       " [14.02,\n",
+       "  1.68,\n",
+       "  2.21,\n",
+       "  16.0,\n",
+       "  96.0,\n",
+       "  2.65,\n",
+       "  2.33,\n",
+       "  0.26,\n",
+       "  1.98,\n",
+       "  4.7,\n",
+       "  1.04,\n",
+       "  3.59,\n",
+       "  1035.0,\n",
+       "  1.0],\n",
+       " [12.37,\n",
+       "  1.21,\n",
+       "  2.56,\n",
+       "  18.1,\n",
+       "  98.0,\n",
+       "  2.42,\n",
+       "  2.65,\n",
+       "  0.37,\n",
+       "  2.08,\n",
+       "  4.6,\n",
+       "  1.19,\n",
+       "  2.3,\n",
+       "  678.0,\n",
+       "  2.0],\n",
+       " [12.29,\n",
+       "  1.61,\n",
+       "  2.21,\n",
+       "  20.4,\n",
+       "  103.0,\n",
+       "  1.1,\n",
+       "  1.02,\n",
+       "  0.37,\n",
+       "  1.46,\n",
+       "  3.05,\n",
+       "  0.906,\n",
+       "  1.82,\n",
+       "  870.0,\n",
+       "  2.0],\n",
+       " [13.62,\n",
+       "  4.95,\n",
+       "  2.35,\n",
+       "  20.0,\n",
+       "  92.0,\n",
+       "  2.0,\n",
+       "  0.8,\n",
+       "  0.47,\n",
+       "  1.02,\n",
+       "  4.4,\n",
+       "  0.91,\n",
+       "  2.05,\n",
+       "  550.0,\n",
+       "  3.0]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
