--- a/evaluation_metrics.ipynb
+++ b/evaluation_metrics.ipynb
@@ -60,6 +60,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A confusion matrix produces a summary of all the predictions made compared to the actual values.\n",
+    "\n",
+    "The results are presented in a matrix with counts in each cell: the counts of predicted class values are summarized horizontally whereas the counts of actual values for each class values are presented vertically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def confusion_matrix(actual, predicted):\n",
+    "    # get the unique classification labels\n",
+    "    unique = set(actual)\n",
+    "\n",
+    "    # create an empty list that holds 1 list for each unique label\n",
+    "    matrix = [list() for x in range(len(unique))]\n",
+    "    for i in range(len(unique)):\n",
+    "        matrix[i] = [0 for x in range(len(unique))]\n",
+    "\n",
+    "    # create empty dictionary\n",
+    "    lookup = dict()\n",
+    "\n",
+    "    for i, value in enumerate(unique):\n",
+    "        lookup[value] = i\n",
+    "\n",
+    "    for i in range(len(actual)):\n",
+    "        x = lookup[actual[i]]\n",
+    "        y = lookup[predicted[i]]\n",
+    "        matrix[x][y] += 1\n",
+    "    return unique, matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unique: {0, 1, 2}\n",
+      "matrix: [[1, 4, 0], [2, 1, 1], [2, 1, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "actual = [0,2,0,2,1,1,0,2,0,1,2,0,1,2,2]\n",
+    "predicted = [1,0,1,2,0,1,0,0,1,2,1,1,0,2,2]\n",
+    "\n",
+    "unique, matrix = confusion_matrix(actual, predicted)\n",
+    "print(f'unique labels: {unique}')\n",
+    "print(f'matrix: {matrix}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
