--- a/evaluation_metrics.ipynb
+++ b/evaluation_metrics.ipynb
@@ -127,6 +127,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mean Absolute Error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mean absolute error calculates the average of the absolute error values, where means are made absolute/positive so that they can be added together.\n",
+    "\n",
+    "$$\n",
+    "\\text{MAE} = \\frac{\\sum_{i=1}^{N} |\\text{predicted}_i - \\text{actual}_i|}{\\text{total predictions}}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mae_metric(actual, predicted):\n",
+    "    sum_error = 0.0\n",
+    "    for i in range(len(actual)):\n",
+    "        sum_error += abs(predicted[i]- actual[i])\n",
+    "    return sum_error / len(actual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05000000000000001"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actual = [1.55, 1.75, 1.3, 1.2, 1.85, 1.95]\n",
+    "predicted = [1.6, 1.8, 1.25, 1.15, 1.9, 1.9]\n",
+    "\n",
+    "mae = mae_metric(actual, predicted)\n",
+    "mae"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
