Added root mean squared error

--- a/evaluation_metrics.ipynb
+++ b/evaluation_metrics.ipynb
@@ -151,9 +151,14 @@
    "outputs": [],
    "source": [
     "def mae_metric(actual, predicted):\n",
+    "    # initiate sum error as 0\n",
     "    sum_error = 0.0\n",
+    "\n",
     "    for i in range(len(actual)):\n",
+    "        # add to sum_error the absolute difference between predicted and actual values \n",
     "        sum_error += abs(predicted[i]- actual[i])\n",
+    "    \n",
+    "    # return the average value\n",
     "    return sum_error / len(actual)"
    ]
   },
@@ -182,11 +187,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Root Mean Squared Error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another useful metric to calculate the error in a set of regression predictions is to use the Root Mean Squared Error.\n",
+    "\n",
+    "It is calculated as the square root of the mean of the squared differences between the actual and predicted outcomes.\n",
+    "\n",
+    "$$\n",
+    "\\text{RMSE} = \\sqrt{\\frac{\\sum_{i=1}^{N} (\\text{predicted}_i - \\text{actual}_i)^2}{\\text{total predictions}}}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def rmse_metric(actual, predicted):\n",
+    "    # initiate sum error as 0\n",
+    "    sum_error = 0.0\n",
+    "\n",
+    "    for i in range(len(actual)):\n",
+    "        # get the difference between the predicted and actual values\n",
+    "        prediction_error = predicted[i] - actual[i]\n",
+    "\n",
+    "        # cumulatively add the difference to sum_error\n",
+    "        sum_error += prediction_error ** 2\n",
+    "        \n",
+    "    mean_error = sum_error / len(actual)\n",
+    "    return mean_error ** 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05000000000000001"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actual = [1.55, 1.75, 1.3, 1.2, 1.85, 1.95]\n",
+    "predicted = [1.6, 1.8, 1.25, 1.15, 1.9, 1.9]\n",
+    "\n",
+    "rmse = rmse_metric(actual, predicted)\n",
+    "rmse"
+   ]
   }
  ],
  "metadata": {
