--- a/knn.ipynb
+++ b/knn.ipynb
@@ -198,6 +198,7 @@
     "    return np.sqrt(np.sum((x1 - x2)**2))\n",
     "\n",
     "class KNN:\n",
+    "    # initiate the KNN classifier and set number of neighbors to 3\n",
     "    def __init__(self, k=3):\n",
     "        self.k = k\n",
     "    \n",
@@ -207,16 +208,18 @@
     "        self.y_train = y\n",
     "\n",
     "    def predict(self, X):\n",
+    "        # apply _predict to each row in X\n",
     "        predicted_labels = [self._predict(x) for x in X]\n",
     "        return np.array(predicted_labels)\n",
     "    \n",
     "    # core of the algorithm\n",
     "    def _predict(self, x):\n",
-    "        # compute distances\n",
+    "        # compute euclidean distances\n",
     "        distances = [euclidean_distance(x, x_train) for x_train in self.X_train]\n",
     "\n",
-    "        # get k nearest samples and labels\n",
+    "        # use argsort to sort distances and get the first k values\n",
     "        k_indices = np.argsort(distances)[:self.k]\n",
+    "        # retrieve the labels of the k nearest neighbors.\n",
     "        k_nearest_labels = [self.y_train[i] for i in k_indices]\n",
     "\n",
     "        # majority vote to get the most common label\n",
