--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -21,35 +21,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LinearRegression:\n",
     "\n",
     "    def __init__(self, lr=0.05, n_iters=1000):\n",
+    "        # initiate linear regression with attributes\n",
     "        self.lr = lr\n",
     "        self.n_iters = n_iters\n",
     "        self.weights = None\n",
     "        self.bias = None\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        # set number of samples ands features\n",
     "        n_samples, n_features = X.shape\n",
+    "\n",
+    "        # initialize weights to zeros for each feature\n",
     "        self.weights = np.zeros(n_features)\n",
+    "        # initialize bias to 0\n",
     "        self.bias = 0\n",
     "\n",
+    "        # perform gradient descent for weights (dw) and bias (db)\n",
     "        for _ in range(self.n_iters):\n",
+    "            # calculate predicted values using: dot product of X and weights in additon to bias\n",
     "            y_predicted = np.dot(X, self.weights) + self.bias\n",
     "\n",
+    "            # calculate gradients of weights and bias\n",
     "            dw = (1/n_samples) * np.dot(X.T, (y_predicted - y))\n",
     "            db = (1/n_samples) * np.sum(y_predicted - y)\n",
-    "\n",
+    "            \n",
+    "            # update weights and bias; the `-=` indicates a loss minimization mechanism\n",
     "            self.weights -= self.lr * dw\n",
     "            self.bias -= self.lr * db\n",
     "\n",
     "    def predict(self, X):\n",
+    "        # calculate predicted values using: dot product of X and weights in additon to bias\n",
     "        y_predicted = np.dot(X, self.weights) + self.bias\n",
     "        return y_predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:\n",
+      "   YearsExperience\n",
+      "0              1.2\n",
+      "1              1.4\n",
+      "2              1.6\n",
+      "3              2.1\n",
+      "4              2.3\n",
+      "y_predicted:\n",
+      "[0. 0. 0. 0. 0.]\n",
+      "dw: [-485004.41333333]\n",
+      "db: -76004.0\n",
+      "weight: [485.00441333]\n",
+      "bias: 76.004\n",
+      "\n",
+      "X:\n",
+      "   YearsExperience\n",
+      "0              1.2\n",
+      "1              1.4\n",
+      "2              1.6\n",
+      "3              2.1\n",
+      "4              2.3\n",
+      "y_predicted:\n",
+      "[ 658.009296    755.01017867  852.01106133 1094.513268   1191.51415067]\n",
+      "dw: [-466604.48799241]\n",
+      "db: -73302.5054424889\n",
+      "weight: [951.60890133]\n",
+      "bias: 149.3065054424889\n",
+      "\n",
+      "X:\n",
+      "   YearsExperience\n",
+      "0              1.2\n",
+      "1              1.4\n",
+      "2              1.6\n",
+      "3              2.1\n",
+      "4              2.3\n",
+      "y_predicted:\n",
+      "[1291.23718703 1481.5589673  1671.88074756 2147.68519823 2338.00697849]\n",
+      "dw: [-448901.6277063]\n",
+      "db: -70703.31730871416\n",
+      "weight: [1400.51052903]\n",
+      "bias: 220.00982275120307\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_ = 0.001\n",
+    "weight_ = np.zeros(1)\n",
+    "bias_ = 0\n",
+    "n_samples = 30\n",
+    "\n",
+    "\n",
+    "for _ in range(3):\n",
+    "    y_predicted = np.dot(X, weight_) + bias_\n",
+    "    print(f'X:\\n{X[:5]}')\n",
+    "    print(f'y_predicted:\\n{y_predicted[:5]}')\n",
+    "    dw = np.dot(X.T, y_predicted - y) / n_samples\n",
+    "    print(f'dw: {dw}')\n",
+    "    db = np.sum(y_predicted - y) / n_samples\n",
+    "    print(f'db: {db}')\n",
+    "    weight_ -= lr_ * dw\n",
+    "    print(f'weight: {weight_}')\n",
+    "    bias_ -=  lr_ * db\n",
+    "    print(f'bias: {bias_}')\n",
+    "    print()"
    ]
   },
   {
@@ -140,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x124608650>"
+       "<matplotlib.collections.PathCollection at 0x1355f7d50>"
       ]
      },
      "execution_count": 4,
@@ -188,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
