--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -35,19 +35,26 @@
     "        self.bias = None\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        # set number of samples and features using shape of features\n",
     "        n_samples, n_features = X.shape\n",
     "        \n",
+    "        # initialize weights to zeros for each feature\n",
     "        self.weights = np.zeros(n_features)\n",
+    "        # initialize bias to 0\n",
     "        self.bias = 0\n",
     "\n",
-    "        # gradient descent\n",
+    "        # perform gradient descent for dw (weight) and db (bias)\n",
     "        for _ in range(self.n_iters):\n",
+    "            # calculate predicted values using: dot product of X and weights in addition to bias\n",
     "            linear_model = np.dot(X, self.weights) + self.bias\n",
+    "            # finalize calculated predicted values by applying sigmoid funciton\n",
     "            y_predicted = self._sigmoid(linear_model)\n",
     "\n",
+    "            # calculate gradients of weight and bias\n",
     "            dw = (1 / n_samples) * np.dot(X.T, (y_predicted - y))\n",
     "            db = (1 / n_samples) * np.sum(y_predicted - y)\n",
     "\n",
+    "            # update weight and bias for each iteration; the `-=` indicates a loss minimization mechanism\n",
     "            self.weights -= self.lr * dw\n",
     "            self.bias -= self.lr * db\n",
     "\n",
