--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -25,22 +25,48 @@
     "class NaiveBayes:\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        #n_samples: number of rows in dataset\n",
+    "        # n_features: number of columns in dataset\n",
     "        n_samples, n_features = X.shape\n",
+    "\n",
+    "        #find the unique labels in dataset\n",
     "        self._classes = np.unique(y)\n",
     "        n_classes = len(self._classes)\n",
     "\n",
     "        # initialize mean, var, priors with zeros\n",
     "        self._mean = np.zeros((n_classes, n_features), dtype=np.float64)\n",
     "        self._var = np.zeros((n_classes, n_features), dtype=np.float64)\n",
+    "        # self_priors will be a 1D vector of number of labels with float datatypes\n",
     "        self_priors = np.zeros(n_classes, dtype=np.float64)\n",
     "\n",
+    "        # for each class, we want\n",
     "        for c in self._classes:\n",
     "            X_c = X[c==y]\n",
     "            self._mean[c,:] = X_c.mean(axis=0)\n",
-    "            pass\n",
+    "            self.var[c,:] = X_c.var(axis=0)\n",
+    "            self._priors[c] = X_c.shape[0] / float(n_samples)\n",
     "\n",
     "    def predict(self, X):\n",
-    "        pass"
+    "        y_pred = [self._predict(x) for x in X]\n",
+    "        return y_pred\n",
+    "    \n",
+    "    def _predict(self, x):\n",
+    "        posteriors = []\n",
+    "\n",
+    "        for idx, c in enumerate(self._classes):\n",
+    "            prior = np.log(self._priors[idx])\n",
+    "            class_conditional = np.sum(np.log(self._pdf(idx, x)))\n",
+    "            posterior = prior + class_conditional\n",
+    "            posteriors.append(posterior)\n",
+    "\n",
+    "        return self._classes[np.argmax(posteriors)]\n",
+    "            \n",
+    "    def _pdf(self, class_idx, x):\n",
+    "        mean = self._mean(class_idx)\n",
+    "        var = self._var[class_idx]\n",
+    "        numerator = np.exp(-(x-mean)**2 / (2 * var))\n",
+    "        denominator = np.sqrt(2 * np.pi * var)\n",
+    "        return numerator / denominator"
    ]
   }
  ],
