--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -40,7 +41,40 @@
     "        self.value = value\n",
     "\n",
     "    def is_leaf_node(self):\n",
-    "        return self.value is not None"
+    "        return self.value is not None\n",
+    "    \n",
+    "class DecisionTree:\n",
+    "    # initiate class and attributes\n",
+    "    def __init__(self, min_samples_split=2, max_depth=100, n_feats=None):\n",
+    "        self.min_samples_split = min_samples_split\n",
+    "        self.max_depth = max_depth\n",
+    "        self.n_feats = n_feats\n",
+    "        self.root = None\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "        # grow tree\n",
+    "        self.n_feats = X.shape[1] if not self.n_feats else min(self.n_feats, X.shape[1])\n",
+    "        self.root = self._grow_tree(X,y)\n",
+    "        \n",
+    "    def _grow_tree(self, X, y, depth=0):\n",
+    "        n_samples, n_features = X.shape\n",
+    "        n_labels = len(np.unique(y))\n",
+    "\n",
+    "        # stopping criteria\n",
+    "        if (depth >= self.max_depth\n",
+    "            or n_labels == 1\n",
+    "            or n_samples < self.min_samples_split):\n",
+    "            leaf_value = self._most_common_label(y)\n",
+    "            return Node(value=leaf_value)\n",
+    "\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        # traverse tree\n",
+    "        pass\n",
+    "\n",
+    "    def _most_common_label(self, y):\n",
+    "        counter = Counter(y)\n",
+    "        pass\n"
    ]
   }
  ],
