--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,29 +53,99 @@
     "\n",
     "    def fit(self, X, y):\n",
     "        # grow tree\n",
+    "        # if no. of features isn't None, we'll take the minimum no. of features\n",
     "        self.n_feats = X.shape[1] if not self.n_feats else min(self.n_feats, X.shape[1])\n",
     "        self.root = self._grow_tree(X,y)\n",
     "        \n",
     "    def _grow_tree(self, X, y, depth=0):\n",
+    "        # set no. of samples and features using dataset's shape\n",
     "        n_samples, n_features = X.shape\n",
+    "        # set no. of unique labels\n",
     "        n_labels = len(np.unique(y))\n",
     "\n",
-    "        # stopping criteria\n",
+    "        # Stopping Criteria\n",
+    "        # if tree depth is greater/equal than max depth\n",
+    "        # or no. of labels is 1 or\n",
+    "        # or no. of samples is less than min. sample split\n",
+    "        # set leaf value to the most common label\n",
     "        if (depth >= self.max_depth\n",
     "            or n_labels == 1\n",
     "            or n_samples < self.min_samples_split):\n",
     "            leaf_value = self._most_common_label(y)\n",
     "            return Node(value=leaf_value)\n",
+    "        \n",
+    "        feat_indx = np.random.choice(n_features, self.n_feats, replace=False)\n",
     "\n",
+    "        # greedy search\n",
+    "        best_feat, best_thresh = self._best_criteria(X, y, feat_indx) \n",
+    "        left_idxs, right_idxs = self._split(X[:, best_feat], best_thresh)\n",
+    "        left = self._grow_tree(X[left_idxs, :], y[left_idxs], depth+1)\n",
+    "        right = self._grow_tree(X[right_idxs, :], y[right_idxs], depth+1)\n",
+    "        return Node(best_feat, best_thresh, left, right)\n",
+    "\n",
+    "    def _best_criteria(self, X, y, feat_idxs):\n",
+    "        best_gain = -1\n",
+    "        split_idx, split_thresh = None, None\n",
+    "        for feat_idx in feat_idxs:\n",
+    "            X_column = X[:, feat_idx]\n",
+    "            thresholds = np.unique(X_column)\n",
+    "            for threshold in thresholds:\n",
+    "                gain = self._information_gain(y, X_column, threshold)\n",
+    "\n",
+    "                if gain > best_gain:\n",
+    "                    best_gain = gain\n",
+    "                    split_idx = feat_idx\n",
+    "                    split_thresh = threshold\n",
+    "        \n",
+    "        return split_idx, split_thresh\n",
+    "    \n",
+    "    def _information_gain(self, y, X_column, split_thresh):\n",
+    "        # parent entropy\n",
+    "        parent_entropy = entropy(y)\n",
+    "        # generate split\n",
+    "        left_idx, right_idx = self._split(X_column, split_thresh)\n",
+    "\n",
+    "        if len(left_idx) == 0 or len(right) == 0:\n",
+    "            return 0\n",
+    "        # weight avg of child entropy\n",
+    "        n = len(y)\n",
+    "        n_l, n_r = len(left_idx), len(right_idx)\n",
+    "        e_l, e_r = entropy(y[left_idx], entropy(y[right_idx]))\n",
+    "        child_entropy = (n_l/n) * e_l + (n_r/n) * e_r\n",
+    "        \n",
+    "        # return info gain\n",
+    "        ig = parent_entropy - child_entropy\n",
+    "        return ig\n",
+    "\n",
+    "    def _split(self, X_column, split_thresh):\n",
+    "        left_idx = np.argwhere(X_column <= split_thresh).flatten()\n",
+    "        right_idx = np.argwhere(X_column > split_thresh).flatten()\n",
+    "        return left_idx, right_idx\n",
     "\n",
     "    def predict(self, X):\n",
     "        # traverse tree\n",
-    "        pass\n",
+    "        return np.array([self._traverse_tree(x, self.root) for x in X])\n",
+    "\n",
+    "    def _traverse_tree(self, x, node):\n",
+    "        if node.is_leaf_node():\n",
+    "            return node.value\n",
+    "        \n",
+    "        if x[node.feature] <= node.threshold:\n",
+    "            return self._traverse_tree(x, node.left)\n",
+    "        return self._traverse_tree(x, node.right)\n",
     "\n",
     "    def _most_common_label(self, y):\n",
     "        counter = Counter(y)\n",
-    "        pass\n"
+    "        most_common = counter.most_common(1)[0][0]\n",
+    "        return most_common"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
